ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "infrakibana"
spec:
  rules:
  - host: infrakibana.wild-beavers.de
    http:
      paths:
      - path: /
        backend:
          serviceName: "kibana"
          servicePort: 443
