ingress2.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "elasticsearch"
  namespace: "logging"
  annotations:
    kubernetes.io/ingress.class: kong-intern
spec:
  rules:
  - host: elasticsearch.paas-intern01.obi.dmz
    http:
      paths:
      - path: /
        backend:
          serviceName: "elasticsearch"
          servicePort: 9200
